--- a/style.css
+++ b/style.css
@@ -1,145 +1,145 @@
-
-
 canvas {
-     border: solid black 1px;
-     background-image: url("assets/background.png")
- }
-
-
-
-h3{
-    margin:0;
+    border: solid black 1px;
+    background-image: url("assets/background.png")
 }
 
- #game_container,
- .game_info,
 
- .start_section,
- .player1,
- .player2 {
-     float: left;
- }
 
- #game_info {
-     max-height: 802px;
-     overflow: scroll;
- }
+h3 {
+    margin: 0;
+}
 
- .game_console,
- .start_section,
- .player1,
- .player2,
- .rules {
-     border: 1px solid black;
-     padding: 15px;
+#game_container,
+.game_info,
 
- }
+.start_section,
+.player1,
+.player2 {
+    float: left;
+}
 
- .rules,
- .start_section,
- .game_console {
-     width: 400px;
- }
+#game_info {
+    max-height: 802px;
+    overflow: scroll;
+}
 
- .rules {
-     overflow: scroll;
-     max-height: 260px;
-     overflow-x: hidden;
- }
+.game_console,
+.start_section,
+.player1,
+.player2,
+.rules {
+    border: 1px solid black;
+    padding: 15px;
 
- .game_console {
-     height: 174.5px;
- }
+}
 
- .start_section {
-     text-align: center;
-     padding-bottom: 0;
-     padding-top: 0;
-     margin: 0;
- }
+.rules,
+.start_section,
+.game_console {
+    width: 400px;
+}
+
+.rules {
+    overflow: scroll;
+    max-height: 260px;
+    overflow-x: hidden;
+}
+
+.game_console {
+    height: 174.5px;
+}
+
+.start_section {
+    text-align: center;
+    padding-bottom: 0;
+    padding-top: 0;
+    margin: 0;
+}
 
 button {
-     padding: 22px 181px;
-     margin: 0;
-     background-color: #63b215;
-     color: white;
-     border-color: #559f0d;
+    padding: 6.6px 114px;
+    font-size: 40px;
+    margin: 0;
+    background-color: #63b215;
+    color: white;
+    border-color: #559f0d;
 
 
- }
+}
 
- .player_info div {
-     width: 184px;
- }
 
- #p1_hp,
- #p2_hp {
-     color: green;
-     font-weight: 800;
- }
+.player_info div {
+    width: 184px;
+}
 
- #p1_weapon,
- #p2_weapon {
-     color: red;
-     font-weight: 800;
- }
+#p1_hp,
+#p2_hp {
+    color: green;
+    font-weight: 800;
+}
 
- #p1_damage,
- #p2_damage {
-     color: darkblue;
-     font-weight: 800;
- }
+#p1_weapon,
+#p2_weapon {
+    color: red;
+    font-weight: 800;
+}
 
- #p1_movement,
- #p2_movement {
-     color: saddlebrown;
-     font-weight: 800;
- }
+#p1_damage,
+#p2_damage {
+    color: darkblue;
+    font-weight: 800;
+}
 
- #consoleOutput {
-     color: firebrick;
-     font-weight: 800;
-     overflow: scroll;
-     overflow-x: hidden;
-     height: 120px;
- }
+#p1_movement,
+#p2_movement {
+    color: saddlebrown;
+    font-weight: 800;
+}
 
- #consoleOutput::-webkit-scrollbar-track,
- .rules::-webkit-scrollbar-track {
-     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-     background-color: #F5F5F5;
-     border-radius: 10px;
- }
+#consoleOutput {
+    color: firebrick;
+    font-weight: 800;
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 120px;
+}
 
- #consoleOutput::-webkit-scrollbar,
- .rules::-webkit-scrollbar {
-     width: 10px;
-     background-color: #F5F5F5;
- }
+#consoleOutput::-webkit-scrollbar-track,
+.rules::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
 
- #consoleOutput::-webkit-scrollbar-thumb,
- .rules::-webkit-scrollbar-thumb {
-     border-radius: 10px;
-     background-image: -webkit-gradient(linear,
-     left bottom,
-     left top,
-     color-stop(0.44, rgb(122, 153, 217)),
-     color-stop(0.72, rgb(73, 125, 189)),
-     color-stop(0.86, rgb(28, 58, 148)));
- }
+#consoleOutput::-webkit-scrollbar,
+.rules::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
 
- #p1_defendMode,
- #p2_defendMode {
-     color: red;
- }
+#consoleOutput::-webkit-scrollbar-thumb,
+.rules::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(122, 153, 217)),
+    color-stop(0.72, rgb(73, 125, 189)),
+    color-stop(0.86, rgb(28, 58, 148)));
+}
 
- #p1_attack,
- #p2_attack {
-     color: purple;
-     font-weight: 800;
- }
+#p1_defendMode,
+#p2_defendMode {
+    color: red;
+}
 
- #p1_turn,
- #p2_turn {
-     margin-top: 0;
- }
+#p1_attack,
+#p2_attack {
+    color: purple;
+    font-weight: 800;
+}
+
+#p1_turn,
+#p2_turn {
+    margin-top: 0;
+}
